adicionei um parágrafo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Olá, mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam totam cumque, optio rerum temporibus doloribus corrupti ut porro. Cupiditate, nam nihil! Consequatur ullam commodi inventore veniam adipisci placeat. Optio, aliquid.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam totam cumque, optio rerum temporibus doloribus corrupti ut porro. Cupiditate, nam nihil! Consequatur ullam commodi inventore veniam adipisci placeat. Optio, aliquid.</p> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus ipsa dicta minus praesentium voluptatem obcaecati quod magni ut, veritatis, rem vitae itaque! Itaque suscipit dolorum magni nesciunt vel expedita asperiores.</p>
 </body>
 </html>
